[package]
name = "tlq_test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tlq-client = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.0"

[lib]
name = "tlq_test_lib"
path = "src/lib.rs"

[[bin]]
name = "tlq_test"
path = "src/main.rs"

# Excluir testes de integração da execução padrão
[[test]]
name = "integration_tests"
path = "src/integration_tests.rs"
required-features = ["integration-tests"]

[features]
default = []
integration-tests = []